--- a/pickup.html
+++ b/pickup.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pickup</title>
     <link rel="stylesheet" href="pickup.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 
 <body>
+
     <div class="container">
         <span class="pickup">Book Your Slot</span>
         <input type="text" class="name" placeholder="Name">
@@ -22,32 +23,34 @@
             <button class="slot-btn" name="btn4">6:00 - 8:00 PM</button>
         </div>
 
-<div class="choicebox">
-    <button class="choices">
-       <i class="fa-solid fa-newspaper"></i> 
-        <p class="text">Paper</p>
-    </button>
-    <button class="choices">
-        <i class="fa-solid fa-bottle-water"></i>
-        <p class="text">Plastic</p>
-    </button>
-    <button class="choices">
-        <i class="fa-solid fa-box-open"></i>
-        <p class="cardb">Cardboard</p>
-    </button>
-    <button class="choices">
-        <i class="fa-solid fa-bicycle"></i>
-        <p class="text">Metal</p>
-    </button>
-    <button class="choices">
-        <i class="fa-solid fa-car-battery"></i>
-        <p class="elect">Electronics</p>
-    </button>
+        <div class="choicebox">
+            <button class="choices">
+                <i class="fa-solid fa-newspaper"></i>
+                <p class="text">Paper</p>
+            </button>
+            <button class="choices">
+                <i class="fa-solid fa-bottle-water"></i>
+                <p class="text">Plastic</p>
+            </button>
+            <button class="choices">
+                <i class="fa-solid fa-box-open"></i>
+                <p class="cardb">Cardboard</p>
+            </button>
+            <button class="choices">
+                <i class="fa-solid fa-bicycle"></i>
+                <p class="text">Metal</p>
+            </button>
+            <button class="choices">
+                <i class="fa-solid fa-car-battery"></i>
+                <p class="elect">Electronics</p>
+            </button>
 
-</div>
+        </div>
 
 
 
+        <script src="pickup.js" defer></script>
 </body>
+
 
 </html>
